log
Fri 09 Sep 2022 12:36:58 PM UTC: 
 tests:  0|6
total_score: 0/70
bca7b4b
Fri 09 Sep 2022 12:40:15 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
hashmap.c: In function ‘createPair’:
hashmap.c:21:4: error: implicit declaration of function ‘assert’ [-Werror=implicit-function-declaration]
   21 |    assert(new != NULL);
      |    ^~~~~~
hashmap.c:7:1: note: ‘assert’ is defined in header ‘<assert.h>’; did you forget to ‘#include <assert.h>’?
    6 | #include "hashmap.h"
  +++ |+#include <assert.h>
    7 | 
cc1: all warnings being treated as errors
Compilation failed
ad6de9b
Fri 09 Sep 2022 12:40:30 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|6
total_score: 0/70
73cdd50
Fri 09 Sep 2022 12:44:05 PM UTC: 
 hashmap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:58:8: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘key’
   58 |     new->key = key;
      |        ^~
hashmap.c:58:16: error: ‘key’ undeclared (first use in this function)
   58 |     new->key = key;
      |                ^~~
hashmap.c:58:16: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:59:8: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘value’
   59 |     new->value = value;
      |        ^~
hashmap.c:59:18: error: ‘value’ undeclared (first use in this function)
   59 |     new->value = value;
      |                  ^~~~~
Compilation failed
571efed
Fri 09 Sep 2022 12:44:47 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:58:8: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘key’
   58 |     new->key = NULL;
      |        ^~
hashmap.c:59:8: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘value’
   59 |     new->value = NULL;
      |        ^~
Compilation failed
6a690a8
Fri 09 Sep 2022 12:47:42 PM UTC: 
 hashmap.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
 tests:  0|6
total_score: 0/70
b594f2b
Fri 09 Sep 2022 12:59:19 PM UTC: 
 hashmap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
2c6c77e
Fri 09 Sep 2022 01:15:57 PM UTC: 
 hashmap.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:45:9: error: ‘true’ undeclared (first use in this function)
   45 |   while(true){
      |         ^~~~
hashmap.c:45:9: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:49:10: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘currrent’; did you mean ‘current’?
   49 |     map->currrent = i;
      |          ^~~~~~~~
      |          current
hashmap.c: In function ‘enlarge’:
hashmap.c:62:13: error: unused variable ‘oldBruckets’ [-Werror=unused-variable]
   62 |     Pair ** oldBruckets = map->buckets;
      |             ^~~~~~~~~~~
hashmap.c: In function ‘eraseMap’:
hashmap.c:82:6: error: ‘pair’ undeclared (first use in this function); did you mean ‘Pair’?
   82 |   if(pair)
      |      ^~~~
      |      Pair
hashmap.c:84:1: error: expected expression before ‘}’ token
   84 | }
      | ^
hashmap.c:80:9: error: unused variable ‘pairEliminar’ [-Werror=unused-variable]
   80 |   Pair *pairEliminar = searchMap(map, key);
      |         ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
7346dd7
Fri 09 Sep 2022 01:16:45 PM UTC: 
 hashmap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:45:9: error: ‘true’ undeclared (first use in this function)
   45 |   while(true){
      |         ^~~~
hashmap.c:45:9: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c: In function ‘enlarge’:
hashmap.c:62:13: error: unused variable ‘oldBruckets’ [-Werror=unused-variable]
   62 |     Pair ** oldBruckets = map->buckets;
      |             ^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
36825b6
Fri 09 Sep 2022 01:16:58 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:45:9: error: ‘true’ undeclared (first use in this function)
   45 |   while(true){
      |         ^~~~
hashmap.c:45:9: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
0bf1a85
Sun 11 Sep 2022 04:18:33 PM UTC: 
 hashmap.c | 23 ++++++++++++++---------
 1 file changed, 14 insertions(+), 9 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:45:9: error: ‘true’ undeclared (first use in this function)
   45 |   while(true){
      |         ^~~~
hashmap.c:45:9: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c: In function ‘enlarge’:
hashmap.c:64:3: error: ‘mapa’ undeclared (first use in this function); did you mean ‘map’?
   64 |   mapa->capacity = mapa->capacity * 2; //dublicar la capacidad
      |   ^~~~
      |   map
hashmap.c:69:21: error: ‘oldBuckets’ undeclared (first use in this function); did you mean ‘oldBruckets’?
   69 |       insertMap(map,oldBuckets[i]->key,oldBuckets[i]->value);
      |                     ^~~~~~~~~~
      |                     oldBruckets
hashmap.c: In function ‘searchMap’:
hashmap.c:93:5: error: expected identifier or ‘(’ before ‘return’
   93 |     return NULL;
      |     ^~~~~~
hashmap.c:94:1: error: control reaches end of non-void function [-Werror=return-type]
   94 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
227dc5b
Sun 11 Sep 2022 04:21:43 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:45:9: error: ‘true’ undeclared (first use in this function)
   45 |   while(true){
      |         ^~~~
hashmap.c:45:9: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c: In function ‘searchMap’:
hashmap.c:93:5: error: expected identifier or ‘(’ before ‘return’
   93 |     return NULL;
      |     ^~~~~~
hashmap.c:94:1: error: control reaches end of non-void function [-Werror=return-type]
   94 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
5d54712
Sun 11 Sep 2022 04:22:12 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:45:9: error: ‘true’ undeclared (first use in this function)
   45 |   while(true){
      |         ^~~~
hashmap.c:45:9: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
b5bec25
